--- a/app/assets/scss/4-pages/_no13.scss
+++ b/app/assets/scss/4-pages/_no13.scss
@@ -29,7 +29,7 @@
       font-weight: 400;
     }
 
-    .btn05 {
+    .dark__blue__outline__button02 {
       margin: 0;
       margin-right: auto;
     }
