--- a/app/assets/scss/4-pages/_no15.scss
+++ b/app/assets/scss/4-pages/_no15.scss
@@ -29,7 +29,7 @@
       font-weight: 400;
     }
 
-    .btn05 {
+    .dark__blue__outline__button02 {
       margin: 0;
       margin-right: auto;
     }
@@ -195,7 +195,7 @@
           }
         }
 
-        .btn03 {
+        .dark__blue__outline__button {
           margin-bottom: 30px;
         }
       }
@@ -232,7 +232,7 @@
           }
         }
 
-        .btn03 {
+        .dark__blue__outline__button {
           margin-bottom: 30px;
         }
       }
