--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -183,7 +183,7 @@
             <div class="flex fS grid__card--cat">
               <span class="cat">ETCカード</span>
             </div>
-            <a href="#" class="btn08">
+            <a href="#" class="bondi__blue__button">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -209,7 +209,7 @@
               <span class="cat">UCエクスプレスゴールドカード</span>
               <span class="cat">パーチェシングカード</span>
             </div>
-            <a href="#" class="btn08">
+            <a href="#" class="bondi__blue__button">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -235,7 +235,7 @@
               <span class="cat">UCエクスプレスゴールドカード</span>
               <span class="cat">パーチェシングカード</span>
             </div>
-            <a href="#" class="btn08">
+            <a href="#" class="bondi__blue__button">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -270,7 +270,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="btn10 small">資料をダウンロード</a>
+              <a href="#" class="blue__gradient__button small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -284,7 +284,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="btn10 small">資料をダウンロード</a>
+              <a href="#" class="blue__gradient__button small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -298,7 +298,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="btn10 small">資料をダウンロード</a>
+              <a href="#" class="blue__gradient__button small">資料をダウンロード</a>
             </div>
           </div>
         </div>
@@ -501,7 +501,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div ><a class="btn10" href="#">サービス資料ダウンロード</a></div>
+                <div ><a class="blue__gradient__button" href="#">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="#" class="card">
@@ -511,7 +511,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="btn10" href="#">お気軽にお問い合わせください。</a></div>
+                <div><a class="blue__gradient__button" href="#">お気軽にお問い合わせください。</a></div>
               </summary>
             </div>
           </div>
