--- a/app/pages/no12/index.njk
+++ b/app/pages/no12/index.njk
@@ -204,7 +204,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="btn06">詳細</a>
+                        <a class="orange__fill__button">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -259,7 +259,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="btn06">詳細</a>
+                        <a class="orange__fill__button">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -313,7 +313,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="btn06">詳細</a>
+                        <a class="orange__fill__button">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -415,7 +415,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="btn06">詳細</a>
+                        <a class="orange__fill__button">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -475,7 +475,7 @@
 
                     <td class="table-data-tertiary">
                       <div>
-                        <a class="btn06">詳細</a>
+                        <a class="orange__fill__button">詳細</a>
                       </div>
                     </td>
                   </tr>
@@ -636,7 +636,7 @@
             </summary>
           </div>
 
-          <a href="#" class="btn02">資料ダウンロード（無料）</a>
+          <a href="#" class="orange__more">資料ダウンロード（無料）</a>
         </div>
       </div>
     </section>
@@ -741,7 +741,7 @@
       <h3 class="ttl-tertiary">当社のサポート担当がご利用用途やご要望をお伺いさせて頂きお客さまにピッタリのカードをご提案致します。<br>
         お気軽にご相談下さい。</h3>
 
-      <a href="#" class="btn02">ボタン名が入ります</a>
+      <a href="#" class="orange__more">ボタン名が入ります</a>
     </section>
 
     <section class="breadcrumb">
