--- a/app/pages/no13/index.njk
+++ b/app/pages/no13/index.njk
@@ -27,7 +27,7 @@
       <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
         最適なビジネスカードをご用意しています</h4>
 
-      <a href="#" class="btn05">経費削減につながるカードはこちら</a>
+      <a href="#" class="dark__blue__outline__button02">経費削減につながるカードはこちら</a>
     </div>
   </section>
 
@@ -187,7 +187,7 @@
                 </div>
 
                 <div>
-                  <a class="btn06">詳細はこちら</a>
+                  <a class="orange__fill__button">詳細はこちら</a>
                 </div>
               </li>
 
@@ -217,7 +217,7 @@
                 </div>
 
                 <div>
-                  <a class="btn06">詳細はこちら</a>
+                  <a class="orange__fill__button">詳細はこちら</a>
                 </div>
               </li>
             </ul>
@@ -254,7 +254,7 @@
                 </div>
 
                 <div>
-                  <a class="btn06">詳細はこちら</a>
+                  <a class="orange__fill__button">詳細はこちら</a>
                 </div>
               </li>
 
@@ -283,7 +283,7 @@
                 </div>
 
                 <div>
-                  <a class="btn06">詳細はこちら</a>
+                  <a class="orange__fill__button">詳細はこちら</a>
                 </div>
               </li>
 
@@ -316,7 +316,7 @@
                 </div>
 
                 <div>
-                  <a class="btn06">詳細はこちら</a>
+                  <a class="orange__fill__button">詳細はこちら</a>
                 </div>
               </li>
             </ul>
@@ -333,7 +333,7 @@
       <h3 class="ttl-tertiary">当社のサポート担当がご利用用途やご要望をお伺いさせて頂きお客さまにピッタリのカードをご提案致します。 お気軽にサポート担当にご相談下さい。<br>
         お気軽にサポート担当にご相談下さい。</h3>
 
-      <a href="#" class="btn02">サポート担当に無料で相談する</a>
+      <a href="#" class="orange__more">サポート担当に無料で相談する</a>
     </div>
   </section>
 
