--- a/app/pages/no14/index.njk
+++ b/app/pages/no14/index.njk
@@ -243,7 +243,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="btn03 small">セゾンフクリコをもっと詳しく</a>
+                <a href="#" class="dark__blue__outline__button small">セゾンフクリコをもっと詳しく</a>
               </div>
             </div>
 
@@ -330,7 +330,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="btn03 small">「Concur Expense」をもっと詳しく</a>
+                <a href="#" class="dark__blue__outline__button small">「Concur Expense」をもっと詳しく</a>
               </div>
             </div>
           </div>
@@ -428,7 +428,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="btn03 small">セゾンインボイスをもっと詳しく</a>
+                <a href="#" class="dark__blue__outline__button small">セゾンインボイスをもっと詳しく</a>
               </div>
             </div>
           </div>
@@ -540,7 +540,7 @@
                   </dt>
                 </dl>
 
-                <a href="#" class="btn03 small">セゾンインボイスをもっと詳しく</a>
+                <a href="#" class="dark__blue__outline__button small">セゾンインボイスをもっと詳しく</a>
               </div>
             </div>
           </div>
@@ -569,7 +569,7 @@
               <br>という方はこちら
             </h3>
 
-            <a href="#" class="btn02 small show-arrow">サービス資料ダウンロード</a>
+            <a href="#" class="orange__more small show-arrow">サービス資料ダウンロード</a>
           </div>
 
           <div class="card">
@@ -577,7 +577,7 @@
               <br>という方はこちら
             </h3>
 
-            <a href="#" class="btn02 small show-arrow">サポート担当に無料で相談する</a>
+            <a href="#" class="orange__more small show-arrow">サポート担当に無料で相談する</a>
           </div>
         </div>
       </div>
