--- a/app/pages/no15/index.njk
+++ b/app/pages/no15/index.njk
@@ -130,7 +130,7 @@
                 </div>
               </div>
 
-              <a href="#" class="btn03 small">支払い.comをもっと詳しく</a>
+              <a href="#" class="dark__blue__outline__button small">支払い.comをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
                 </li>
               </ul>
 
-              <a href="#" class="btn03">セゾンビジネスサポートローンをもっと詳しく</a>
+              <a href="#" class="dark__blue__outline__button">セゾンビジネスサポートローンをもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -263,7 +263,7 @@
               </div>
             </div>
 
-            <a href="#" class="btn03 small">ビジネスファンディングをもっと詳しく</a>
+            <a href="#" class="dark__blue__outline__button small">ビジネスファンディングをもっと詳しく</a>
           </div>
         </div>
       </div>
@@ -321,7 +321,7 @@
               </div>
             </div>
 
-            <a href="#" class="btn03 small">MONEY CARDをもっと詳しく</a>
+            <a href="#" class="dark__blue__outline__button small">MONEY CARDをもっと詳しく</a>
           </div>
         </div>
       </div>
@@ -349,7 +349,7 @@
               <br>という方はこちら
             </h3>
 
-            <a href="#" class="btn02 small show-arrow">サービス資料ダウンロード</a>
+            <a href="#" class="orange__more small show-arrow">サービス資料ダウンロード</a>
           </div>
 
           <div class="card">
@@ -358,7 +358,7 @@
               <br>という方はこちら
             </h3>
 
-            <a href="#" class="btn02 small show-arrow">サポート担当に無料で相談する</a>
+            <a href="#" class="orange__more small show-arrow">サポート担当に無料で相談する</a>
           </div>
         </div>
       </div>
