--- a/app/pages/parts/index.njk
+++ b/app/pages/parts/index.njk
@@ -43,27 +43,27 @@
       <hr style="margin: 30px 0; display: block;">
 
       <!-- ボタン -->
-      <a href="#" class="btn01">タイプ01</a>
+      <a href="#" class="blue__more">タイプ01</a>
 
       <hr style="margin: 30px 0; display: block;">
 
       <!-- 呼びかけボタン -->
       <div class="speech"><span>吹き出しコメント</span></div>
-      <a href="#" class="btn01">タイプ01</a>
+      <a href="#" class="blue__more">タイプ01</a>
 
       <hr style="margin: 30px 0; display: block;">
 
       <!-- 吹き出し付きボタン -->
       <div class="ctabtn">
         <div class="balloon"><span class="balloon__txt">差別化をサポートする森下仁丹のサービス資料</span></div>
-        <a href="#" class="btn01">サービス資料ダウンロード</a>
+        <a href="#" class="blue__more">サービス資料ダウンロード</a>
         <summary class="tooltip">お申込み後、リアルタイムでお送りいたします！</summary>
       </div>
 
       <hr style="margin: 30px 0; display: block;">
 
       <!-- サムネ付きボタン -->
-      <a href="#" class="btn01 thumb">タイプ01</a>
+      <a href="#" class="blue__more thumb">タイプ01</a>
 
       <hr style="margin: 30px 0; display: block;">
 
