--- a/app/pages/section/index.njk
+++ b/app/pages/section/index.njk
@@ -78,7 +78,7 @@
           <div class="item__box--num">01</div>
           <h2 class="item__box--ttl">タイトルがそのまま入ります<br>タイトルがそのまま入ります</h2>
           <div class="item__box--txt">テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります</div>
-          <a href="#" class="btn01">ボタン名が入ります</a>
+          <a href="#" class="blue__more">ボタン名が入ります</a>
         </summary>
         <figure class="item__img"><img src="/assets/img/common/img01.jpg" alt=""></figure>
       </div>
@@ -89,7 +89,7 @@
           <div class="item__box--num">02</div>
           <h2 class="item__box--ttl">タイトルがそのまま入ります<br>タイトルがそのまま入ります</h2>
           <div class="item__box--txt">テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります</div>
-          <a href="#" class="btn01">ボタン名が入ります</a>
+          <a href="#" class="blue__more">ボタン名が入ります</a>
         </summary>
       </div>
 
@@ -146,7 +146,7 @@
         <li><img src="/assets/img/common/logo.svg" alt=""></li>
         <li><img src="/assets/img/common/logo.svg" alt=""></li>
       </ul>
-      <a href="#" class="btn01">ボタン名が入ります</a>
+      <a href="#" class="blue__more">ボタン名が入ります</a>
     </div>
   </section>
 
@@ -207,12 +207,12 @@
     <div class="containers">
       <h2 class="ttl-secondary cW">タイトルがそのまま入ります</h2>
       <h3 class="lead">リード文が入ります。リード文が入ります。リード文が入ります。</h3>
-      <a href="/contact/" class="btn01">お問合せ・ご相談はこちら</a>
+      <a href="/contact/" class="blue__more">お問合せ・ご相談はこちら</a>
       <summary class="flex aiC inquiry__box">
         <div class="inquiry__box--txt">テキストが入りますテキストが入ります</div>
         <div class="flex inquiry__box--btn">
-          <a href="#" class="btn01">ボタン名</a>
-          <a href="#" class="btn01">ボタン名</a>
+          <a href="#" class="blue__more">ボタン名</a>
+          <a href="#" class="blue__more">ボタン名</a>
         </div>
       </summary>
     </div>
@@ -226,14 +226,14 @@
       <div class="inquiry02__box">
         <h2 class="inquiry02__box--ttl">ご相談・お問い合わせ</h2>
         <div class="inquiry02__box--lead">セキュリティ担当者様の業務課題に関する<br>ご相談・お問い合わせはお気軽に<br class="sp-only">ご連絡下さい。</div>
-        <a href="#" class="btn01">ご相談・お問い合わせ</a>
+        <a href="#" class="blue__more">ご相談・お問い合わせ</a>
         <a href="tel:0332668128" class="tel">03-3266-8128</a>
         <div class="inquiry02__box--txt">（平日09:00〜17:00）</div>
         <h3 class="inquiry02__box--subttl"><span>カタログやお役立ち資料を<br class="sp-only">ご希望の方はこちら</span></h3>
         <div class="flex">
-          <a href="#" class="btn01 small">カタログ</a>
-          <a href="#" class="btn01 small">ホワイトペーパ</a>
-          <a href="#" class="btn01 small">事例資料</a>
+          <a href="#" class="blue__more small">カタログ</a>
+          <a href="#" class="blue__more small">ホワイトペーパ</a>
+          <a href="#" class="blue__more small">事例資料</a>
         </div>
       </div>
     </div>
@@ -270,7 +270,7 @@
         <figure class="desc__img"><img src="/assets/img/common/img-wp.png" alt=""></figure>
         <summary class="desc__box">
           <div class="desc__box--ttl">差別化をサポートする<br>森下仁丹のサービス資料</div>
-          <a href="/whitepaper/" class="btn01">サービス資料をダウンロード</a>
+          <a href="/whitepaper/" class="blue__more">サービス資料をダウンロード</a>
         </summary>
       </div>
     </div>
@@ -329,7 +329,7 @@
           </dl>
         </a>
 
-      <a href="/news/" class="btn01">お知らせ一覧を見る</a>
+      <a href="/news/" class="blue__more">お知らせ一覧を見る</a>
     </div>
   </section>
 
@@ -356,7 +356,7 @@
           <div class="card__box--txt">活用シーンの補足説明文が入ります。活用シーンの補足説明文が入ります。活用シーンの補足説明文が入ります。活用シーンの補足説明文が入ります。</div>
         </li>
       </ul>
-      <a href="#" class="btn01">ボタン名が入ります</a>
+      <a href="#" class="blue__more">ボタン名が入ります</a>
     </div>
   </section>
 
@@ -389,7 +389,7 @@
           </summary>
         </li>
       </ul>
-      <a href="#" class="btn01">ボタン名が入ります</a>
+      <a href="#" class="blue__more">ボタン名が入ります</a>
     </div>
   </section>
 
@@ -422,7 +422,7 @@
           </summary>
         </a>
       </div>
-      <a href="#" class="btn01">ボタン名が入ります</a>
+      <a href="#" class="blue__more">ボタン名が入ります</a>
     </div>
   </section>
 
@@ -466,7 +466,7 @@
           <h3 class="card__box--ttl">採用業務を効率化したい</h3>
         </li>
       </ul>
-      <a href="#" class="btn01">ボタン名が入ります</a>
+      <a href="#" class="blue__more">ボタン名が入ります</a>
     </div>
   </section>
 
@@ -507,13 +507,13 @@
       <div class="hero01__box">
         <div class="hero01__box--sub">サブタイトルが入ります</div>
         <h1 class="ttl-primary">h1タイトルがそのまま入ります<br>h1タイトルがそのまま入ります</h1>
-        <a href="#" class="btn01">ボタン名が入ります</a>
+        <a href="#" class="blue__more">ボタン名が入ります</a>
       </div>
       <a href="#" class="hero01__wp">
         <div class="hero01__wp--ttl">お役立ち資料</div>
         <div class="hero01__wp--txt">テキストが入ります</div>
         <figure class="hero01__wp--img"><img src="/assets/img/common/img-wp.png" alt=""></figure>
-        <div class="btn01">資料ダウンロード</div>
+        <div class="blue__more">資料ダウンロード</div>
       </a>
     </div>
   </section>
@@ -526,7 +526,7 @@
       <div class="hero02__box">
         <div class="hero02__box--sub">サブタイトルが入ります</div>
         <h1 class="ttl-primary">h1タイトルがそのまま入ります<br>h1タイトルがそのまま入ります</h1>
-        <a href="#" class="btn01">ボタン名が入ります</a>
+        <a href="#" class="blue__more">ボタン名が入ります</a>
       </div>
     </div>
   </section>
@@ -539,7 +539,7 @@
       <div class="hero03__box">
         <div class="hero03__box--sub">サブタイトルが入ります</div>
         <h1 class="ttl-primary">h1タイトルがそのまま入ります<br>h1タイトルがそのまま入ります</h1>
-        <a href="#" class="btn01">ボタン名が入ります</a>
+        <a href="#" class="blue__more">ボタン名が入ります</a>
       </div>
     </div>
   </section>
@@ -962,7 +962,7 @@
                 <div class="item__box--txt">資料キャッチコピーが入ります。資料キャッチコピーが入ります。資料キャッチコピーが入ります。</div>
               </summary>
             </div>
-            <a href="#" class="btn01 small"><span>資料ダウンロード</span></a>
+            <a href="#" class="blue__more small"><span>資料ダウンロード</span></a>
           </div>
         </div>
 
@@ -1332,7 +1332,7 @@
                 <td><div class="flex fS aiC"><input type="checkbox">同意する</div><p>弊社Webサイトの<a href="/privacy/">プライバシーポリシー</a>をご確認の上、ご同意いただき送信をお願いいたします。</p></td>
               </tr>
             </table>
-            <button type="submit" class="btn01 small">確認画面へ進む</button>
+            <button type="submit" class="blue__more small">確認画面へ進む</button>
           </div>
         </form>
         <!-- カイロスタグ挿入 end -->
