--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -135,7 +135,7 @@
 }
 
 // ボタン01
-.btn01 {
+.blue__more {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -238,7 +238,7 @@
 }
 
 // ボタン02
-.btn02 {
+.orange__more {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -346,7 +346,7 @@
 }
 
 // ボタン03
-.btn03 {
+.dark__blue__outline__button {
   display: block;
   max-width: 560px;
   color: #003f98;
@@ -432,7 +432,7 @@
 }
 
 // ボタン04
-.btn04 {
+.black__pill__button02 {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -511,7 +511,7 @@
 }
 
 // ボタン05
-.btn05 {
+.dark__blue__outline__button02 {
   display: block;
   max-width: 560px;
   color: #111450;
@@ -586,7 +586,7 @@
 }
 
 // ボタン06
-.btn06 {
+.orange__fill__button {
   background-color: #f29600;
   padding: 30px 0;
   width: 100%;
@@ -598,7 +598,7 @@
 }
 
 // ボタン07
-.btn07 {
+.default__button {
   background-color: #e1e1e1;
   padding: 10px;
   width: 100%;
@@ -612,7 +612,7 @@
 }
 
 // ボタン08
-.btn08 {
+.bondi__blue__button {
   display: inline-flex;
   max-width: 560px;
   color: #fff;
@@ -702,7 +702,7 @@
 }
 
 // ボタン09
-.btn09 {
+.bondi__blue__outline__button {
   position: relative;
   max-width: 560px;
   display: block;
@@ -744,7 +744,7 @@
 }
 
 // ボタン10
-.btn10 {
+.blue__gradient__button {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -847,7 +847,7 @@
 }
 
 // ボタン11
-.btn11 {
+.light__button {
   max-width: 380px;
   position: relative;
   text-align: center;
