--- a/app/_template/partial/footer.njk
+++ b/app/_template/partial/footer.njk
@@ -89,7 +89,7 @@
       <div class="anc">
         <div class="containers">
           <ul class="flex jcC gap30 inherit anc__box">
-            <li class="light__button">
+            <li class="light_button">
               <a href="#">ご相談・お問合せ</a>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
                 viewBox="0 0 27 27">
@@ -107,7 +107,7 @@
                 </g>
               </svg>
             </li>
-            <li class="light__button">
+            <li class="light_button">
               <a href="#">サービス資料</a>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
                 viewBox="0 0 27 27">
@@ -125,7 +125,7 @@
                 </g>
               </svg>
             </li>
-            <li class="light__button">
+            <li class="light_button">
               <a href="#">お役立ち資料</a>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="27" height="27"
                 viewBox="0 0 27 27">
