--- a/app/pages/business/index.njk
+++ b/app/pages/business/index.njk
@@ -23,7 +23,7 @@
 
     <h2 class="ttl-primary">中小企業様向けサービス</h2>
 
-    <a href="#" class="orange__more">まとめて資料をダウンロードする</a>
+    <a href="#" class="orange_more">まとめて資料をダウンロードする</a>
   </section>
 
   <section class="section-primary">
@@ -162,7 +162,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black__pill__button02 small">解決策！</a>
+              <a href="#" class="black_pill_button small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -253,7 +253,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="dark__blue__outline__button small">カードの詳細はこちら</a>
+                  <a href="#" class="dark_blue_outline_button small">カードの詳細はこちら</a>
                 </li>
 
                 <li class="card-type12">
@@ -276,7 +276,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="dark__blue__outline__button small">カードの詳細はこちら</a>
+                  <a href="#" class="dark_blue_outline_button small">カードの詳細はこちら</a>
                 </li>
 
                 <li class="card-type12">
@@ -299,7 +299,7 @@
                     </li>
                   </ul>
 
-                  <a href="#" class="dark__blue__outline__button small">カードの詳細はこちら</a>
+                  <a href="#" class="dark_blue_outline_button small">カードの詳細はこちら</a>
                 </li>
               </ul>
             </div>
@@ -353,7 +353,7 @@
                 </div>
               </div>
 
-              <a href="#" class="dark__blue__outline__button small">「Concur Expense」をもっと詳しく</a>
+              <a href="#" class="dark_blue_outline_button small">「Concur Expense」をもっと詳しく</a>
             </div>
           </div>
         </div>
@@ -365,7 +365,7 @@
 
           <summary class="flex aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black__pill__button02 small">解決策！</a>
+              <a href="#" class="black_pill_button small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -382,7 +382,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark__blue__outline__button small">支払い.comをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_button small">支払い.comをもっと詳しく</a>
         </div>
       </div>
 
@@ -392,7 +392,7 @@
 
           <summary class="flex aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black__pill__button02 small">解決策！</a>
+              <a href="#" class="black_pill_button small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -437,7 +437,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark__blue__outline__button small">セゾンインボイスをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_button small">セゾンインボイスをもっと詳しく</a>
         </div>
       </div>
 
@@ -447,7 +447,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black__pill__button02 small">解決策！</a>
+              <a href="#" class="black_pill_button small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -514,7 +514,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark__blue__outline__button small">セゾンフクリコをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_button small">セゾンフクリコをもっと詳しく</a>
         </div>
       </div>
 
@@ -524,7 +524,7 @@
 
           <summary class="flex gap30 aiC inquiry__box">
             <div class="flex inquiry__box--btn">
-              <a href="#" class="black__pill__button02 small">解決策！</a>
+              <a href="#" class="black_pill_button small">解決策！</a>
             </div>
 
             <div class="inquiry__box--txt">
@@ -595,7 +595,7 @@
             </div>
           </div>
 
-          <a href="#" class="dark__blue__outline__button small">CosProをもっと詳しく</a>
+          <a href="#" class="dark_blue_outline_button small">CosProをもっと詳しく</a>
         </div>
       </div>
     </div>
@@ -607,7 +607,7 @@
 
       <h3 class="ttl-tertiary">興味のあるサービス資料をまとめてダウンロードできます。</h3>
 
-      <a href="#" class="orange__more">まとめて資料をダウンロードする</a>
+      <a href="#" class="orange_more">まとめて資料をダウンロードする</a>
     </div>
   </section>
 
@@ -623,7 +623,7 @@
 
           <h4 class="ttl-quaternary">
             最強のコスパとマイル還元率です。
-          </h4>
+        </h4>
 
           <h5 class="ttl-quinary">
             truck LLC/代表/善利光雅 様
@@ -631,7 +631,7 @@
 
           <h6 class="ttl-senary">ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・</h6>
 
-          <a href="#" class="dark__blue__outline__button02 small">インタビューの続きを見る</a>
+          <a href="#" class="dark_blue_outline_rounded_button small">インタビューの続きを見る</a>
         </div>
 
         <div class="card-type10">
