--- a/app/assets/scss/3-modules/_button.scss
+++ b/app/assets/scss/3-modules/_button.scss
@@ -135,7 +135,7 @@
 }
 
 // ボタン01
-.blue__more {
+.blue_more {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -238,7 +238,7 @@
 }
 
 // ボタン02
-.orange__more {
+.orange_more {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -346,7 +346,7 @@
 }
 
 // ボタン03
-.dark__blue__outline__button {
+.dark_blue_outline_button {
   display: block;
   max-width: 560px;
   color: #003f98;
@@ -432,7 +432,7 @@
 }
 
 // ボタン04
-.black__pill__button02 {
+.black_pill_button {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -482,8 +482,14 @@
   }
   // 小さいボタン
   &.small {
-    max-width: 330px;
-    padding: 5px 35px;
+    color: $white-color;
+    font-size: 14px;
+    font-weight: 600;
+    border-bottom: 1px solid #707070;
+    border-radius: 11px;
+
+    padding: 0 15px;
+    background-color: $primary-color;
     &:before {
       width: 6px;
       height: 6px;
@@ -511,7 +517,7 @@
 }
 
 // ボタン05
-.dark__blue__outline__button02 {
+.dark_blue_outline_rounded_button {
   display: block;
   max-width: 560px;
   color: #111450;
@@ -586,7 +592,7 @@
 }
 
 // ボタン06
-.orange__fill__button {
+.orange_fill_button {
   background-color: #f29600;
   padding: 30px 0;
   width: 100%;
@@ -598,7 +604,7 @@
 }
 
 // ボタン07
-.default__button {
+.default_button {
   background-color: #e1e1e1;
   padding: 10px;
   width: 100%;
@@ -612,7 +618,7 @@
 }
 
 // ボタン08
-.bondi__blue__button {
+.bondi_blue_button {
   display: inline-flex;
   max-width: 560px;
   color: #fff;
@@ -702,7 +708,7 @@
 }
 
 // ボタン09
-.bondi__blue__outline__button {
+.bondi_blue_outline_button {
   position: relative;
   max-width: 560px;
   display: block;
@@ -744,7 +750,7 @@
 }
 
 // ボタン10
-.blue__gradient__button {
+.blue_gradient_button {
   display: block;
   max-width: 560px;
   color: #fff;
@@ -847,7 +853,7 @@
 }
 
 // ボタン11
-.light__button {
+.light_button {
   max-width: 380px;
   position: relative;
   text-align: center;
@@ -949,15 +955,4 @@
       color: #fff;
     }
   }
-}
-
-.black__pill__button {
-  color: $white-color;
-  font-size: 14px;
-  font-weight: 600;
-  border-bottom: 1px solid #707070;
-  border-radius: 11px;
-
-  padding: 0 15px;
-  background-color: $primary-color;
 }
