--- a/app/pages/index.njk
+++ b/app/pages/index.njk
@@ -183,7 +183,7 @@
             <div class="flex fS grid__card--cat">
               <span class="cat">ETCカード</span>
             </div>
-            <a href="#" class="bondi__blue__button">
+            <a href="#" class="bondi_blue_button">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -209,7 +209,7 @@
               <span class="cat">UCエクスプレスゴールドカード</span>
               <span class="cat">パーチェシングカード</span>
             </div>
-            <a href="#" class="bondi__blue__button">
+            <a href="#" class="bondi_blue_button">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -235,7 +235,7 @@
               <span class="cat">UCエクスプレスゴールドカード</span>
               <span class="cat">パーチェシングカード</span>
             </div>
-            <a href="#" class="bondi__blue__button">
+            <a href="#" class="bondi_blue_button">
               導入事例を見る
               <svg xmlns="http://www.w3.org/2000/svg" width="15.095" height="15.095" viewBox="0 0 15.095 15.095">
                 <path id="Path_44704" data-name="Path 44704" d="M9.674,0V9.674H0"
@@ -246,8 +246,8 @@
         </div>
       </div>
     </div>
-    <a href="#" class="btn09">
-      <span class="btn09__tittle">
+    <a href="#" class="bondi_blue_outline_button">
+      <span class="bondi_blue_outline_button__tittle">
         導入事例一覧を見る
       </span>
     </a>
@@ -270,7 +270,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="blue__gradient__button small">資料をダウンロード</a>
+              <a href="#" class="blue_gradient_button small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -284,7 +284,7 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="blue__gradient__button small">資料をダウンロード</a>
+              <a href="#" class="blue_gradient_button small">資料をダウンロード</a>
             </div>
           </div>
 
@@ -298,15 +298,15 @@
             </h5>
             <h6 class="ttl-senary">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</h6>
             <div class="quinary-btn">
-              <a href="#" class="blue__gradient__button small">資料をダウンロード</a>
+              <a href="#" class="blue_gradient_button small">資料をダウンロード</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <a href="#" class="btn09">
-      <span class="btn09__tittle">
+    <a href="#" class="bondi_blue_outline_button">
+      <span class="bondi_blue_outline_button__tittle">
         お役立ち資料一覧を見る
       </span>
     </a>
@@ -324,7 +324,7 @@
                 <dt class="flex aiC gap20 sp-fS">
                   <time class="time">2022.9.20</time>
                 </dt>
-                <h4 class="black__pill__button">お知らせ</h4>
+                <h4 class="black_pill_button small">お知らせ</h4>
               </dl>
             </div>
             <h2 class="ttl-tertiary">タイトルが入ります。タイトルが入ります。</h2>
@@ -374,7 +374,7 @@
                 <dt class="flex aiC gap20 sp-fS">
                   <time class="time">2022.9.20</time>
                 </dt>
-                <h4 class="black__pill__button">お知らせ</h4>
+                <h4 class="black_pill_button small">お知らせ</h4>
               </dl>
             </div>
             <h2 class="ttl-tertiary">タイトルが入ります。タイトルが入ります。</h2>
@@ -421,8 +421,8 @@
         </div>
       </div>
     </div>
-    <a href="#" class="btn09">
-      <span class="btn09__tittle">
+    <a href="#" class="bondi_blue_outline_button">
+      <span class="bondi_blue_outline_button__tittle">
         セミナー・イベント情報一覧を見る
       </span>
     </a>
@@ -437,7 +437,7 @@
           <dl class="flex aiC sec-news__box--item">
             <dt class="flex aiC sp-fS">
               <time class="time">2022.9.20</time>
-              <span class="black__pill__button">お知らせ</span>
+              <span class="black_pill_button small">お知らせ</span>
             </dt>
             <dd>お知らせタイトルが入ります。</dd>
           </dl>
@@ -446,7 +446,7 @@
           <dl class="flex aiC sec-news__box--item">
             <dt class="flex aiC sp-fS">
               <time class="time">2022.9.20</time>
-              <span class="black__pill__button">セミナー</span>
+              <span class="black_pill_button small">セミナー</span>
             </dt>
             <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタイトルが入ります</dd>
           </dl>
@@ -455,7 +455,7 @@
           <dl class="flex aiC sec-news__box--item">
             <dt class="flex aiC sp-fS">
               <time class="time">2022.9.20</time>
-              <span class="black__pill__button">お知らせ</span>
+              <span class="black_pill_button small">お知らせ</span>
             </dt>
             <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
           </dl>
@@ -464,7 +464,7 @@
           <dl class="flex aiC sec-news__box--item">
             <dt class="flex aiC sp-fS">
               <time class="time">2022.9.20</time>
-              <span class="black__pill__button">セミナー</span>
+              <span class="black_pill_button small">セミナー</span>
             </dt>
             <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。お知らせタ</dd>
           </dl>
@@ -473,15 +473,15 @@
           <dl class="flex aiC sec-news__box--item">
             <dt class="flex aiC sp-fS">
               <time class="time">2022.9.20</time>
-              <span class="black__pill__button">お知らせ</span>
+              <span class="black_pill_button small">お知らせ</span>
             </dt>
             <dd>お知らせタイトルが入ります。お知らせタイトルが入ります。</dd>
           </dl>
         </div>
       </div>
     </div>
-    <a href="#" class="btn09">
-      <span class="btn09__tittle">
+    <a href="#" class="bondi_blue_outline_button">
+      <span class="bondi_blue_outline_button__tittle">
         お知らせ一覧を見る
       </span>
     </a>
@@ -501,7 +501,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div ><a class="blue__gradient__button" href="#">サービス資料ダウンロード</a></div>
+                <div ><a class="blue_gradient_button" href="#">サービス資料ダウンロード</a></div>
               </summary>
             </div>
             <div href="#" class="card">
@@ -511,7 +511,7 @@
                   <br>
                   サービス資料をダウンロードいただけます。
                 </div>
-                <div><a class="blue__gradient__button" href="#">お気軽にお問い合わせください。</a></div>
+                <div><a class="blue_gradient_button" href="#">お気軽にお問い合わせください。</a></div>
               </summary>
             </div>
           </div>
